# stellar

./: .env.example  .gitignore  Makefile  README.md  demo_inputs.json  run_all.ps1
circuits/compliance/: Nargo.toml
circuits/compliance/src/: main.nr
contracts/verifier/: Cargo.toml  Soroban.toml
contracts/verifier/src/: lib.rs
frontend/: app.js  index.html  style.css
merkle/: build_tree.js  package-lock.json  package.json  poseidon.mjs
scripts/: config.sh  convert_vk.js  deploy_contract.sh  generate_proof.ps1  generate_proof.sh  generate_prover_toml.js  submit_proof.sh
