[package]
name = "compliance-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.1", features = ["alloc"] }
# rs-soroban-ultrahonk — UltraHonk verifier for Soroban
# Main branch expects VK format from bb < v5 (1760 bytes).
# For bb v5+ (protocol 25, 1888-byte VK), use PR #26 branch:
#   rev = "theahaco/feat/bb3-nozk-verifier"
# See: https://github.com/NethermindEth/rs-soroban-ultrahonk/pull/26
ultrahonk_soroban_verifier = { git = "https://github.com/NethermindEth/rs-soroban-ultrahonk", package = "ultrahonk_soroban_verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
