[package]
name = "compliance-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "25.3.0", features = ["alloc"] }
# rs-soroban-ultrahonk PR#26 — adds bb v5 / protocol 25 support for VK (1888 bytes)
# Uses soroban-sdk 25.3.0 (must match our SDK version).
# See: https://github.com/NethermindEth/rs-soroban-ultrahonk/pull/26
ultrahonk_soroban_verifier = { git = "https://github.com/NethermindEth/rs-soroban-ultrahonk", rev = "eae28b3eb654369988e10dbc2e2fec280dd8561d", package = "ultrahonk_soroban_verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
